# horse-fish

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sops.yaml  CLAUDE.md  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  secrets.enc.json
.claude/: CLAUDE.md
.mulch/: mulch.config.yaml
.mulch/expertise/: agents.jsonl  architecture.jsonl  cli.jsonl  dashboard.jsonl  dispatch.jsonl  e2e.jsonl  lessons.jsonl  memory.jsonl  merge.jsonl  models.jsonl  observability.jsonl  orchestrator.jsonl  planner.jsonl  runtime.jsonl  store.jsonl  testing.jsonl  textual-widgets.jsonl  (+2 more)
.overstory/: config.yaml
.seeds/: config.yaml  issues.jsonl
docs/: cognee-integration-findings.md
infra/: .env.example  docker-compose.yml  setup-env.sh
scripts/: load_secrets.py
tests/: test_cancel_kill.py  test_cli.py  test_cognee_memory.py  test_cognee_orchestrator.py  test_dashboard.py  test_dashboard_app.py  test_dashboard_widgets.py  test_dispatch.py  test_e2e.py  test_engine.py  test_goal_planner.py  test_heartbeat.py  test_integration.py  test_lessons.py  test_memory.py  test_merge_conflicts.py  test_merge_queue.py  test_middleware.py  test_models.py  test_observability.py  test_orchestrator.py  test_partial_success.py  test_plan_executor.py  test_plan_integration.py  test_planner.py  test_pool.py  test_prompt.py  test_report.py  test_run_manager.py  test_runtime.py  test_scout.py  test_smart_integration.py  test_smart_planner.py  test_smoke.py  test_smokefix.py  test_stats.py  test_store.py  test_tmux.py  test_validation.py  test_worktree.py
(+87 files in other folders)
