[project]
name = "horse-fish"
version = "0.1.0"
description = "Agent swarm orchestration framework"
requires-python = ">=3.12"
dependencies = [
    "click>=8",
    "pydantic>=2",
]

[project.optional-dependencies]
memory = [
    "memvid-sdk>=0.1",
    "cognee>=0.1",
]
observability = [
    "langfuse>=2.0",
]
dashboard = ["textual>=1.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[project.scripts]
hf = "horse_fish.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
